background colour bug fix stopping character disply on IOS

--- a/assets/style.css
+++ b/assets/style.css
@@ -109,8 +109,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 100%;
-    margin: 0.2vh;
-    background-color: rgb(233, 33, 33);
+    /* background-color: rgb(233, 33, 33); */
     border-radius: 5px;
     transform: scale(1);
     transform-style: preserve-3d;
@@ -153,8 +152,7 @@ h1 {
 }
 
 .memory-card.flip.matched {
-    background-image: linear-gradient(45deg, black, white);
-    background-size: 400%;
+    /* background-image: linear-gradient(45deg, black, white); */
     animation: match-animation 1.5s infinite alternate;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -174,7 +172,7 @@ h1 {
 .back-face {
     height: 100%;
     width: 100%;
-    padding: 5px;
+    /* padding: 5px; */
     border-radius: 5px;
     position: absolute;
     border: 1px solid black;
